--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -620,13 +620,6 @@ NHS.UK prototype kit
                         </tr>
 
                         <tr role="row" class="nhsuk-table__row">
-                            <td class="nhsuk-table__cell">Surcharge Notice on hold</td>
-                            <td class="nhsuk-table__cell"><a href="v6-pcn-decs/surcharge-penalty-charge-on-hold">Surcharge details on
-                            hold</a></td>
-                            <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
-                        </tr>
-
-                        <tr role="row" class="nhsuk-table__row">
                             <td class="nhsuk-table__cell">Penalty Charge Notice - active Direct Debit</td>
                             <td class="nhsuk-table__cell"><a href="v6-pcn/penalty-charge-details-DD-active">Penalty Charge details active DD
                             </a></td>
@@ -688,7 +681,7 @@ NHS.UK prototype kit
                             </td>
                             <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--green">
                                 DECS
-                                </strong></td>
+                            </strong></td>
                         </tr>
                         <tr role="row" class="nhsuk-table__row">
                             <td class="nhsuk-table__cell">We found a HC3 certificate with a lower contribution amount</td>
@@ -714,26 +707,19 @@ NHS.UK prototype kit
 
                         <tr role="row" class="nhsuk-table__row">
                             <td class="nhsuk-table__cell">Penalty Charge Notice details Hc3</td>
-                            <td class="nhsuk-table__cell"><a href="v6-pcn/penalty-charge-details-hc3-decs">Penalty Charge Notice
-                                Hc3</a></td>
-                            <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--green">
-                                DECS
-                                </strong></td>
-                        </tr>
-
-                        <tr role="row" class="nhsuk-table__row">
-                            <td class="nhsuk-table__cell">Surcharge Notice details</td>
                             <td class="nhsuk-table__cell">
-                                <a href="v6-pcn-decs/surcharge-penalty-charge-notice">Surcharge Penalty Charge Notice</a>
+                                <a href="v6-pcn/penalty-charge-details-hc3-decs">Penalty Charge Notice Hc3</a>
                             </td>
                             <td class="nhsuk-table__cell">
-                                <strong class="nhsuk-tag">BOTH</strong>
+                                <strong class="nhsuk-tag nhsuk-tag--green">
+                                    DECS
+                                </strong>
                             </td>
                         </tr>
                     </tbody>
                 </table>
 
-                <h3>HC3 Ceritificate surcharge pages</h3>
+                <h3>Surcharge pages</h3>
 
                 <table class="nhsuk-table">
                     <thead role="rowgroup" class="nhsuk-table__head">
@@ -752,10 +738,60 @@ NHS.UK prototype kit
 
                     <tbody class="nhsuk-table__body">
                         <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell">Penalty Charge Notice - Open (Surcharge)</td>
+                            <td class="nhsuk-table__cell">
+                                <a href="v6-pcn/surcharge-penalty-charge-notice">Penalty Charge Notice - Open (Surcharge)</a>
+                            </td>
+                            <td class="nhsuk-table__cell">
+                                <strong class="nhsuk-tag nhsuk-tag--blue">PECS</strong>
+                            </td>
                         </tr>
+
+                        <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell">Penalty Charge Notice - Open (Surcharge)</td>
+                            <td class="nhsuk-table__cell">
+                                <a href="v6-pcn-decs/surcharge-penalty-charge-notice">Penalty Charge Notice - Open (Surcharge)</a>
+                            </td>
+                            <td class="nhsuk-table__cell">
+                                <strong class="nhsuk-tag nhsuk-tag--green">DECS</strong>
+                            </td>
+                        </tr>
+
+                        <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell">Penalty Charge Notice HC3 - Open (Surcharge)</td>
+                            <td class="nhsuk-table__cell">
+                                <a href="v6-pcn-decs/surcharge-penalty-charge-notice-hc3">Penalty Charge Notice HC3 - Open (Surcharge)</a>
+                            </td>
+                            <td class="nhsuk-table__cell">
+                                <strong class="nhsuk-tag nhsuk-tag--green">DECS</strong>
+                            </td>
+                        </tr>
+
+                        <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell">Penalty Charge Notice - On Hold (Surcharge)</td>
+                            <td class="nhsuk-table__cell">
+                                <a href="v6-pcn/surcharge-penalty-charge-on-hold">Penalty Charge Notice - On Hold (Surcharge)</a>
+                            </td>
+                            <td class="nhsuk-table__cell">
+                                <strong class="nhsuk-tag nhsuk-tag--blue">PECS</strong>
+                            </td>
+                        </tr>
+
+                        <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell">Penalty Charge Notice - On Hold (Surcharge)</td>
+                            <td class="nhsuk-table__cell">
+                                <a href="v6-pcn-decs/surcharge-penalty-charge-on-hold">Penalty Charge Notice - On Hold (Surcharge)</a>
+                            </td>
+                            <td class="nhsuk-table__cell">
+                                <strong class="nhsuk-tag nhsuk-tag--green">DECS</strong>
+                            </td>
+                        </tr>
+
+
+
                         <tr role="row" class="nhsuk-table__row">
                             <td class="nhsuk-table__cell">We found a HC3 certificate (Recalculated)</td>
-                            <td class="nhsuk-table__cell"><a href="v6-pcn-decs/we-found-a-hc3-cert-recalculated">We found a HC3 certificate (recalculated)</a>
+                            <td class="nhsuk-table__cell"><a href="v6-pcn-decs/we-found-a-hc3-cert-recalculated">We found a HC3 certificate (Recalculated)</a>
                             </td>
                             <td class="nhsuk-table__cell">
                                 <strong class="nhsuk-tag nhsuk-tag--green">
@@ -777,7 +813,7 @@ NHS.UK prototype kit
 
                         <tr role="row" class="nhsuk-table__row">
                             <td class="nhsuk-table__cell">We found a HC3 certificate with a lower contribution amount (Surcharge)</td>
-                            <td class="nhsuk-table__cell"><a href="v6-pcn-decs/we-found-a-hc3-cert-lower-surcharge">We found a HC3 cert lower (surcharge)</a>
+                            <td class="nhsuk-table__cell"><a href="v6-pcn-decs/we-found-a-hc3-cert-lower-surcharge">We found a HC3 cert lower (Surcharge)</a>
                             </td>
                             <td class="nhsuk-table__cell">
                                 <strong class="nhsuk-tag nhsuk-tag--green">
@@ -788,7 +824,7 @@ NHS.UK prototype kit
 
                         <tr role="row" class="nhsuk-table__row">
                             <td class="nhsuk-table__cell">We found a HC3 certificate with the same contribution amount (Surcharge)</td>
-                            <td class="nhsuk-table__cell"><a href="v6-pcn-decs/we-found-a-hc3-cert-same-surcharge">We found a HC3 cert same (surcharge)</a></td>
+                            <td class="nhsuk-table__cell"><a href="v6-pcn-decs/we-found-a-hc3-cert-same-surcharge">We found a HC3 cert same (Surcharge)</a></td>
                             <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--green">
                                 DECS
                                 </strong>
