--- a/app/views/v6-pcn/surcharge-penalty-charge-notice.html
+++ b/app/views/v6-pcn/surcharge-penalty-charge-notice.html
@@ -12,8 +12,6 @@
 
 {% block content %}
 
-
-
 <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
         <span class="nhsuk-caption-m">Your details</span>
@@ -41,28 +39,19 @@
                 <dl class="nhsuk-summary-list nhsuk-summary-list">
                     <div class="nhsuk-summary-list__row">
                         <dt class="nhsuk-summary-list__key">
-                            Dental treatment charges
+                            Prescription charges
                         </dt>
                         <dd class="nhsuk-summary-list__value">
-                            £14.30
+                            £25.80
                         </dd>
                     </div>
-
-                    <!-- <div class="nhsuk-summary-list__row">
-                        <dt class="nhsuk-summary-list__key">
-                            Outstanding treatment charge
-                        </dt>
-                        <dd class="nhsuk-summary-list__value">
-                            £14.30
-                        </dd>
-                    </div> -->
 
                     <div class="nhsuk-summary-list__row">
                         <dt class="nhsuk-summary-list__key">
                             Penalty charge
                         </dt>
                         <dd class="nhsuk-summary-list__value">
-                            £71.50
+                            £100.00
                         </dd>
                     </div>
 
@@ -71,7 +60,7 @@
                             Surcharge
                         </dt>
                         <dd class="nhsuk-summary-list__value">
-                            £35.75
+                            £354.20
                         </dd>
                     </div>
 
@@ -80,7 +69,7 @@
                             Total amount to pay
                         </dt>
                         <dd class="nhsuk-summary-list__value">
-                            <strong>£107.25</strong>
+                            <strong>£480.00</strong>
                         </dd>
                     </div>
                 </dl>
@@ -108,7 +97,7 @@
         
         <p>If you have recently made a payment, it can take 24 hours for payment information to update.</p>
 
-        <h3>Details on the dental treatment form</h3>
+        <h3>Details on the prescription</h3>
 
         <dl class="nhsuk-summary-list">
             <div class="nhsuk-summary-list__row">
@@ -134,13 +123,13 @@
                     Exemption reason ticked
                 </dt>
                 <dd class="nhsuk-summary-list__value">
-                    Has a valid HC3 certificate - limited help with health costs
+                    Has a valid prescription prepayment certificate
                 </dd>
             </div>
 
             <div class="nhsuk-summary-list__row">
                 <dt class="nhsuk-summary-list__key">
-                    Date dental treatment was claimed
+                    Date prescription was claimed
                 </dt>
                 <dd class="nhsuk-summary-list__value">
                     On 04 October 2019
@@ -148,8 +137,8 @@
             </div>
         </dl>
 
-        <p>If you were entitled to free dental treatment, answering some questions to confirm this can help us resolve this issue.</p>
-        <p>If you were not entitled to free dental treatment and need to pay a Penalty Charge Notice, you can pay by either:</p>
+        <!-- <p>If you were entitled to free dental treatment, answering some questions to confirm this can help us resolve this issue.</p> -->
+        <p>If you were not entitled to free NHS prescriptions and need to pay a Penalty Charge Notice, you can pay by either:</p>
         
         <ul>
             <li>debit or credit card</li>
