Further surcharge WIP

--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -787,6 +787,54 @@ NHS.UK prototype kit
                             </td>
                         </tr>
 
+                        <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell">View your active Direct Debit (Surcharge)</td>
+                            <td class="nhsuk-table__cell">
+                                <a href="v6-pcn/view-your-active-dd-surcharge">View your active Direct Debit (Surcharge)</a>
+                            </td>
+                            <td class="nhsuk-table__cell">
+                                <strong class="nhsuk-tag nhsuk-tag--blue">
+                                    PECS
+                                </strong>
+                            </td>
+                        </tr>
+
+                        <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell">View your active Direct Debit (Surcharge)</td>
+                            <td class="nhsuk-table__cell">
+                                <a href="v6-pcn-decs/view-your-active-dd-surcharge">View your active Direct Debit (Surcharge)</a>
+                            </td>
+                            <td class="nhsuk-table__cell">
+                                <strong class="nhsuk-tag nhsuk-tag--green">
+                                    DECS
+                                </strong>
+                            </td>
+                        </tr>
+
+                        <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell">View your rejected Direct Debit (Surcharge)</td>
+                            <td class="nhsuk-table__cell">
+                                <a href="v6-pcn/view-your-rejected-dd-surcharge">View your rejected Direct Debit (Surcharge)</a>
+                            </td>
+                            <td class="nhsuk-table__cell">
+                                <strong class="nhsuk-tag nhsuk-tag--blue">
+                                    PECS
+                                </strong>
+                            </td>
+                        </tr>
+
+                        <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell">View your rejected Direct Debit (Surcharge)</td>
+                            <td class="nhsuk-table__cell">
+                                <a href="v6-pcn-decs/view-your-rejected-dd-surcharge">View your rejected Direct Debit (Surcharge)</a>
+                            </td>
+                            <td class="nhsuk-table__cell">
+                                <strong class="nhsuk-tag nhsuk-tag--green">
+                                    DECS
+                                </strong>
+                            </td>
+                        </tr>
+
 
 
                         <tr role="row" class="nhsuk-table__row">
@@ -851,39 +899,6 @@ NHS.UK prototype kit
                     </thead>
 
                     <tbody class="nhsuk-table__body">
-
-                        <!-- <tr role="row" class="nhsuk-table__row">
-                            <td class="nhsuk-table__cell">View your active Direct Debit (Surcharge)</td>
-                            <td class="nhsuk-table__cell"><a href="#">View your active Direct Debit (Surcharge)</a>
-                            </td>
-                            <td class="nhsuk-table__cell">
-                                <strong class="nhsuk-tag nhsuk-tag--blue">
-                                    PECS
-                                </strong>
-                            </td>
-                        </tr> -->
-
-                        <tr role="row" class="nhsuk-table__row">
-                            <td class="nhsuk-table__cell">View your active Direct Debit (Surcharge)</td>
-                            <td class="nhsuk-table__cell"><a href="v6-pcn-decs/view-your-active-dd-surcharge">View your active Direct Debit (Surcharge)</a>
-                            </td>
-                            <td class="nhsuk-table__cell">
-                                <strong class="nhsuk-tag nhsuk-tag--green">
-                                    DECS
-                                </strong>
-                            </td>
-                        </tr>
-
-                        <tr role="row" class="nhsuk-table__row">
-                            <td class="nhsuk-table__cell">View your rejected Direct Debit (Surcharge)</td>
-                            <td class="nhsuk-table__cell"><a href="v6-pcn-decs/view-your-rejected-dd-surcharge">View your rejected Direct Debit (Surcharge)</a>
-                            </td>
-                            <td class="nhsuk-table__cell">
-                                <strong class="nhsuk-tag nhsuk-tag--green">
-                                    DECS
-                                </strong>
-                            </td>
-                        </tr>
 
                         <tr role="row" class="nhsuk-table__row">
                             <td class="nhsuk-table__cell">View your blocked Direct Debit (Surcharge)</td>
