Surcharge screens / adhoc updated

--- a/app/views/v6-pcn/view-your-inactive-dd-surcharge.html
+++ b/app/views/v6-pcn/view-your-inactive-dd-surcharge.html
@@ -47,95 +47,68 @@ Penalty Charge Notice details on hold
 		</div>
 
 		<div class="nhsuk-card">
-			<div class="nhsuk-card__content">
-				<h2 class="nhsuk-card__heading">
-					Penalty Charge Notice amount
-				</h2>
+            <div class="nhsuk-card__content">
+                <h2 class="nhsuk-card__heading">
+                    Penalty Charge Notice amount
+                </h2>
 
-				<dl class="nhsuk-summary-list nhsuk-summary-list">
-					<div class="nhsuk-summary-list__row">
-						<dt class="nhsuk-summary-list__key">
-							Dental treatment charges
-						</dt>
-						<dd class="nhsuk-summary-list__value">
-							£17.60
-						</dd>
-					</div>
-		
-					<div class="nhsuk-summary-list__row">
-						<dt class="nhsuk-summary-list__key">
-							HC3 Contribution
-						</dt>
-						<dd class="nhsuk-summary-list__value">
-							£54.40
-						</dd>
-					</div>
-							
-					<div class="nhsuk-summary-list__row">
-						<dt class="nhsuk-summary-list__key">
-							Amount you should have paid
-						</dt>
-						<dd class="nhsuk-summary-list__value">
-							£14.70
-						</dd>
-					</div>
-		
-					<div class="nhsuk-summary-list__row">
-						<dt class="nhsuk-summary-list__key">
-							Amount you've already paid
-						</dt>
-						<dd class="nhsuk-summary-list__value">
-							£0.00
-						</dd>
-					</div>
-		
-					<div class="nhsuk-summary-list__row">
-						<dt class="nhsuk-summary-list__key">
-							Oustanding Treatment Charge
-						</dt>
-						<dd class="nhsuk-summary-list__value">
-							£14.70
-						</dd>
-					</div>
-		
-					<div class="nhsuk-summary-list__row">
-						<dt class="nhsuk-summary-list__key">
-							Penalty charge
-						</dt>
-						<dd class="nhsuk-summary-list__value">
-							£48.25
-						</dd>
-					</div>
-		
-					<div class="nhsuk-summary-list__row">
-						<dt class="nhsuk-summary-list__key">
-							Total amount to pay
-						</dt>
-						<dd class="nhsuk-summary-list__value">
-							<strong>£57.90</strong>
-						</dd>
-					</div>
-				</dl>
-	  
-				<h2 class="nhsuk-card__heading">
-					Previous payments
-				</h3>
-			
-				<dl class="nhsuk-summary-list nhsuk-summary-list">
-					<div class="nhsuk-summary-list__row">
-						<dt class="nhsuk-summary-list__key">
-							Payments made
-						</dt>
-						<dd class="nhsuk-summary-list__value">
-							£7.90
-						</dd>
-					</div>
-				</dl>
+                <dl class="nhsuk-summary-list nhsuk-summary-list">
+                    <div class="nhsuk-summary-list__row">
+                        <dt class="nhsuk-summary-list__key">
+                            Prescription charges
+                        </dt>
+                        <dd class="nhsuk-summary-list__value">
+                            £17.60
+                        </dd>
+                    </div>
 
-				<p style="font-weight: bold; font-size:36px;">
-					Amount still to pay: £50.00
-				</p>
-			</div>
+                    <div class="nhsuk-summary-list__row">
+                        <dt class="nhsuk-summary-list__key">
+                            Penalty charge
+                        </dt>
+                        <dd class="nhsuk-summary-list__value">
+                            £48.25
+                        </dd>
+                    </div>
+
+                    <div class="nhsuk-summary-list__row">
+                        <dt class="nhsuk-summary-list__key">
+                            Surcharge
+                        </dt>
+                        <dd class="nhsuk-summary-list__value">
+                            £35.30
+                        </dd>
+                    </div>
+
+                    <div class="nhsuk-summary-list__row">
+                        <dt class="nhsuk-summary-list__key">
+                            Total amount to pay
+                        </dt>
+                        <dd class="nhsuk-summary-list__value">
+                            <strong>£57.90</strong>
+                        </dd>
+                    </div>
+                </dl>
+            
+                <h2 class="nhsuk-card__heading">
+                    Previous payments
+                </h3>
+
+                <dl class="nhsuk-summary-list nhsuk-summary-list">
+                    <div class="nhsuk-summary-list__row">
+                        <dt class="nhsuk-summary-list__key">
+                        Payments made
+                        </dt>
+                        <dd class="nhsuk-summary-list__value">
+                        £7.90
+                        </dd>
+                    </div>
+                </dl>
+
+                <p style="font-weight: bold; font-size:36px;">
+                    Amount still to pay: £50.00
+                </p>
+            </div>
 		</div>
 
     	<p>If you have recently made a payment, it can take 24 hours for payment information to update.</p>
