--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -835,7 +835,49 @@ NHS.UK prototype kit
                             </td>
                         </tr>
 
+                        <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell">View your blocked Direct Debit (Surcharge)</td>
+                            <td class="nhsuk-table__cell"><a href="v6-pcn/view-your-blocked-dd-surcharge">View your blocked Direct Debit (Surcharge)</a>
+                            </td>
+                            <td class="nhsuk-table__cell">
+                                <strong class="nhsuk-tag nhsuk-tag--blue">
+                                    PECS
+                                </strong>
+                            </td>
+                        </tr>
 
+                        <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell">View your blocked Direct Debit (Surcharge)</td>
+                            <td class="nhsuk-table__cell"><a href="v6-pcn-decs/view-your-blocked-dd-surcharge">View your blocked Direct Debit (Surcharge)</a>
+                            </td>
+                            <td class="nhsuk-table__cell">
+                                <strong class="nhsuk-tag nhsuk-tag--green">
+                                    DECS
+                                </strong>
+                            </td>
+                        </tr>
+
+                        <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell">View your inactive Direct Debit (Surcharge)</td>
+                            <td class="nhsuk-table__cell"><a href="v6-pcn/view-your-inactive-dd-surcharge">View your inactive Direct Debit (Surcharge)</a>
+                            </td>
+                            <td class="nhsuk-table__cell">
+                                <strong class="nhsuk-tag nhsuk-tag--blue">
+                                    PECS
+                                </strong>
+                            </td>
+                        </tr>
+
+                        <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell">View your inactive Direct Debit (Surcharge)</td>
+                            <td class="nhsuk-table__cell"><a href="v6-pcn-decs/view-your-inactive-dd-surcharge">View your inactive Direct Debit (Surcharge)</a>
+                            </td>
+                            <td class="nhsuk-table__cell">
+                                <strong class="nhsuk-tag nhsuk-tag--green">
+                                    DECS
+                                </strong>
+                            </td>
+                        </tr>
 
                         <tr role="row" class="nhsuk-table__row">
                             <td class="nhsuk-table__cell">We found a HC3 certificate (Recalculated)</td>
@@ -878,50 +920,6 @@ NHS.UK prototype kit
                                 </strong>
                             </td>
                         </tr>
-                    </tbody>
-                </table>
-
-                <h3>Direct Debit surcharge pages</h3>
-
-                <table class="nhsuk-table">
-                    <thead role="rowgroup" class="nhsuk-table__head">
-                        <tr role="row">
-                            <th role="columnheader" class="" scope="col">
-                                Page title
-                            </th>
-                            <th role="columnheader" class="" scope="col">
-                                URL
-                            </th>
-                            <th role="columnheader" class="" scope="col">
-                                PECS/DECS
-                            </th>
-                        </tr>
-                    </thead>
-
-                    <tbody class="nhsuk-table__body">
-
-                        <tr role="row" class="nhsuk-table__row">
-                            <td class="nhsuk-table__cell">View your blocked Direct Debit (Surcharge)</td>
-                            <td class="nhsuk-table__cell"><a href="v6-pcn-decs/view-your-blocked-dd-surcharge">View your blocked Direct Debit (Surcharge)</a>
-                            </td>
-                            <td class="nhsuk-table__cell">
-                                <strong class="nhsuk-tag nhsuk-tag--green">
-                                    DECS
-                                </strong>
-                            </td>
-                        </tr>
-
-                        <tr role="row" class="nhsuk-table__row">
-                            <td class="nhsuk-table__cell">View your cancelled Direct Debit (Surcharge)</td>
-                            <td class="nhsuk-table__cell"><a href="v6-pcn-decs/view-your-cancelled-dd-surcharge">View your cancelled Direct Debit (Surcharge)</a>
-                            </td>
-                            <td class="nhsuk-table__cell">
-                                <strong class="nhsuk-tag nhsuk-tag--green">
-                                    DECS
-                                </strong>
-                            </td>
-                        </tr>
-
                     </tbody>
                 </table>
 
