--- a/app/views/v6-pcn-decs/view-your-inactive-dd-surcharge.html
+++ b/app/views/v6-pcn-decs/view-your-inactive-dd-surcharge.html
@@ -36,12 +36,13 @@ Penalty Charge Notice details on hold
 		<div class="nhsuk-warning-callout">
 			<h3 class="nhsuk-warning-callout__label">
 				<span role="text">
-					<span class="nhsuk-u-visually-hidden">Important: </span>
+				<span class="nhsuk-u-visually-hidden">Important: </span>
 					Do not delay
 				</span>
 			</h3>
-			<p>We were unable to verify your details.</p>
-			<p>You now have 10 days to either confirm you were entitled to free NHS prescriptions, or pay this Penalty Charge Notice (by 16 September 2021).</p>
+			<p>
+			You now have 10 days to either confirm you were entitled to free NHS prescriptions, or pay this Penalty Charge Notice (by 16 September 2021).
+			</p>
 			<p>If you do not respond, an extra surcharge of up to £50 may be added to these charges.</p>
 		</div>
 
@@ -145,8 +146,8 @@ Penalty Charge Notice details on hold
 				</p>
 			</div>
 		</div>
-		
-		<p>If you have recently made a payment, it can take 24 hours for payment information to update.</p>
+
+    	<p>If you have recently made a payment, it can take 24 hours for payment information to update.</p>
 
 		<h3>Details on the dental treatment form</h3>
 		
@@ -190,25 +191,23 @@ Penalty Charge Notice details on hold
 
 		<h2>You'll not be able to confirm your entitlement online</h2>
 		<p>This is because you have either:</p>
+		
 		<ul>
 			<li>an active Direct Debit</li>
 			<li>previously set up a Direct Debit</li>
 		</ul>
-    
+
     	<p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs" target="_blank">Contact us if you have any further queries about confirming your <br> entitlement (opens in a new tab)</a>.</p>
 
 		<h2>Pay a Penalty Charge Notice</h2>
-		<p>If you were not entitled to free NHS prescriptions and need to pay a Penalty Charge Notice, you can pay by either debit or credit card.</p>
-		<p>You are not able to pay by Direct Debit. This is because either:</p>
+		<p>If you were not entitled to free NHS prescriptions and need to pay a Penalty Charge Notice, you can pay by either:</p>
 		
 		<ul>
-			<li>we were unable to confirm your details when you applied previously</li>
-			<li>you have previously had a Direct Debit plan cancelled</li>
-			<li>the amount you need to pay is below the minimum needed to set up a Direct Debit</li>
+			<li>debit or credit card</li>
+			<li>Direct Debit</li>
 		</ul>
-
-		<a href="payment-choice" class="nhsuk-button">
-			Pay	
+		<a href="payment-method" class="nhsuk-button">
+		  Pay
 		</a>
   	</div>
 </div>
