decs surcharge on hold updated

--- a/app/views/v6-pcn-decs/surcharge-penalty-charge-on-hold.html
+++ b/app/views/v6-pcn-decs/surcharge-penalty-charge-on-hold.html
@@ -33,69 +33,104 @@
         </div>
         
         <div class="nhsuk-card">
-            <div class="nhsuk-card__content">
-                <h2 class="nhsuk-card__heading">
-                    Penalty Charge Notice amount
-                </h2>
-                
-                <dl class="nhsuk-summary-list nhsuk-summary-list">
-                    <div class="nhsuk-summary-list__row">
-                        <dt class="nhsuk-summary-list__key">
-                            Dental treatment charges
-                        </dt>
-                        <dd class="nhsuk-summary-list__value">
-                            £14.30
-                        </dd>
-                    </div>
+			<div class="nhsuk-card__content">
+				<h2 class="nhsuk-card__heading">
+					Penalty Charge Notice amount
+				</h2>
 
+				<dl class="nhsuk-summary-list nhsuk-summary-list">
+					<div class="nhsuk-summary-list__row">
+						<dt class="nhsuk-summary-list__key">
+							Dental treatment charges
+						</dt>
+						<dd class="nhsuk-summary-list__value">
+							£14.70
+						</dd>
+					</div>
 
-                    <div class="nhsuk-summary-list__row">
-                        <dt class="nhsuk-summary-list__key">
-                            Penalty charge
-                        </dt>
-                        <dd class="nhsuk-summary-list__value">
-                            £71.50
-                        </dd>
-                    </div>
+					<div class="nhsuk-summary-list__row">
+						<dt class="nhsuk-summary-list__key">
+							HC3 Contribution
+						</dt>
+						<dd class="nhsuk-summary-list__value">
+							£54.40
+						</dd>
+					</div>
 
-                    <div class="nhsuk-summary-list__row">
-                        <dt class="nhsuk-summary-list__key">
-                            Surcharge
-                        </dt>
-                        <dd class="nhsuk-summary-list__value">
-                            £35.75
-                        </dd>
-                    </div>
+					<div class="nhsuk-summary-list__row">
+						<dt class="nhsuk-summary-list__key">
+							Amount you should've paid 
+						</dt>
+						<dd class="nhsuk-summary-list__value">
+							£14.70
+						</dd>
+					</div>
 
-                    <div class="nhsuk-summary-list__row">
-                        <dt class="nhsuk-summary-list__key">
-                            Total amount to pay
-                        </dt>
-                        <dd class="nhsuk-summary-list__value">
-                            <b>£121.55</b>
-                        </dd>
-                    </div>
-                </dl>
-      
-                <h2 class="nhsuk-card__heading">
-                    Previous payments
-                </h2>
+					<div class="nhsuk-summary-list__row">
+						<dt class="nhsuk-summary-list__key">
+							Amount you've already paid 
+						</dt>
+						<dd class="nhsuk-summary-list__value">
+							£0.00
+						</dd>
+					</div>
 
-                <dl class="nhsuk-summary-list nhsuk-summary-list">
-                    <div class="nhsuk-summary-list__row">
-                        <dt class="nhsuk-summary-list__key">
-                            Payments made
-                        </dt>
-                        <dd class="nhsuk-summary-list__value">
-                            £0.00
-                        </dd>
-                    </div>
-                </dl>
+					<div class="nhsuk-summary-list__row">
+						<dt class="nhsuk-summary-list__key">
+							Outstanding Treatment Charge 
+						</dt>
+						<dd class="nhsuk-summary-list__value">
+							£14.70
+						</dd>
+					</div>
 
-                <p class="nhsuk-heading-l">
-                    Amount still to pay: £121.55
-                </p>
-            </div>
+					<div class="nhsuk-summary-list__row">
+						<dt class="nhsuk-summary-list__key">
+							Penalty Charge 
+						</dt>
+						<dd class="nhsuk-summary-list__value">
+							£73.50
+						</dd>
+					</div>
+
+					<div class="nhsuk-summary-list__row">
+						<dt class="nhsuk-summary-list__key">
+							Surcharge
+						</dt>
+						<dd class="nhsuk-summary-list__value">
+							£35.50
+						</dd>
+					</div>
+
+					<div class="nhsuk-summary-list__row">
+						<dt class="nhsuk-summary-list__key">
+							Total amount to pay
+						</dt>
+						<dd class="nhsuk-summary-list__value">
+							<strong>£173.50</strong>
+						</dd>
+					</div>
+				</dl>
+
+				<h2 class="nhsuk-card__heading">
+					Previous payments
+				</h2>
+		
+				<dl class="nhsuk-summary-list nhsuk-summary-list">
+					<div class="nhsuk-summary-list__row">
+						<dt class="nhsuk-summary-list__key">
+							Payments made
+						</dt>
+						<dd class="nhsuk-summary-list__value">
+							£0.00
+						</dd>
+					</div>
+				</dl>
+
+				<p style="font-weight: bold; font-size:36px;">
+					Amount still to pay: £88.20
+				</p>
+			</div>
         </div>
         
         <p>If you have recently made a payment, it can take 24 hours for payment information to update.</p>
