Surcharge warning callouts updated

--- a/app/views/v6-pcn-decs/surcharge-penalty-charge-notice-hc3.html
+++ b/app/views/v6-pcn-decs/surcharge-penalty-charge-notice-hc3.html
@@ -47,11 +47,11 @@ Penalty Charge Notice details hc3
 			<h3 class="nhsuk-warning-callout__label">
 				<span role="text">
 					<span class="nhsuk-u-visually-hidden">Important: </span>
-					Do not delay
+					Immediate action required
 				</span>
 			</h3>
-			<p>You now have 0 days to either confirm you were entitled to free or reduced cost NHS dental treatment, or pay this Penalty Charge Notice (by 16 September 2021).</p>
-			<p>If you do not respond, an extra surcharge of up to £50 may be added to these charges.</p>
+			<p>You must either confirm you were entitled to free or reduced cost NHS dental treatment, or pay your Penalty Charge Notice as soon as possible.</p>
+			<p>If you do not respond, we will treat it as a deliberate decision to avoid paying the charges that you owe the NHS and we may start debt recovery proceedings.</p>
 		</div>
 
 		<div class="nhsuk-card">
