--- a/app/views/v6-pcn-decs/view-your-blocked-dd-surcharge.html
+++ b/app/views/v6-pcn-decs/view-your-blocked-dd-surcharge.html
@@ -41,8 +41,8 @@ Penalty Charge Notice details on hold
 				</span>
 			</h3>
 			<p>We were unable to verify your details.</p>
-			<p>You now have 10 days to either confirm you were entitled to free NHS prescriptions, or pay this Penalty Charge Notice (by 16 September 2021).</p>
-			<p>If you do not respond, an extra surcharge of up to £50 may be added to these charges.</p>
+			<p>You now have 10 days to either confirm you were entitled to free or reduced cost NHS dental treatment, or pay this Penalty Charge Notice (by 16 September 2021).</p>
+			<p>If you do not respond, we will treat it as a deliberate decision to avoid paying the charges that you owe the NHS and we may start debt recovery proceedings.</p>
 		</div>
 
 		<div class="nhsuk-card">
