--- a/app/views/v6-pcn/surcharge-penalty-charge-notice.html
+++ b/app/views/v6-pcn/surcharge-penalty-charge-notice.html
@@ -26,7 +26,7 @@
                 Immediate action required
                 </span>
             </h3>
-            <p>You must pay your Penalty Charge Notice as soon as possible.</p>
+            <p>You must either confirm you were entitled to free NHS prescriptions, or pay your Penalty Charge Notice as soon as possible.</p>
             <p>If you do not respond, we will treat it as a deliberate decision to avoid paying the charges that you owe the NHS and we may start debt recovery proceedings.</p>
         </div>
         
