--- a/app/views/v6-pcn/view-your-active-dd-surcharge.html
+++ b/app/views/v6-pcn/view-your-active-dd-surcharge.html
@@ -41,7 +41,7 @@ Penalty Charge Notice details on hold
 				</span>
 			</h3>
 			<p>You've set up a Direct Debit to pay your penalty charge.</p>
-			<p>If we're unable to take a payment, you may have to pay a surcharge of up to £50.</p>
+			<p>You must follow your payment plan. If we're unable to take a payment we may start debt recovery proceedings.</p>
 		</div>
 			
 		<div class="nhsuk-card">
