Surcharge on hold bottom sections fixed

--- a/app/views/v6-pcn-decs/surcharge-penalty-charge-on-hold.html
+++ b/app/views/v6-pcn-decs/surcharge-penalty-charge-on-hold.html
@@ -175,7 +175,12 @@
             </div>
         </dl>
 
-        <p>If you were entitled to free dental treatment, answering some questions to confirm this can help us resolve this issue.</p>
+		<p>You cannot do anything more to confirm entitlement online at the moment.</p>
+		<p>If we've asked you to send proof to help us review your case, you should send this as soon as possible.</p>
+		<p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">Contact us if you have any further queries about confirming your entitlement (opens in a new window)</a>.</p>
+
+		<h2>Pay a Penalty Charge Notice</h2>
+
         <p>If you were not entitled to free dental treatment and need to pay a Penalty Charge Notice, you can pay by either:</p>
         
         <ul>
