--- a/app/views/v6-pcn-decs/we-need-proof-pregnant.html
+++ b/app/views/v6-pcn-decs/we-need-proof-pregnant.html
@@ -40,6 +40,8 @@ We cannot confirm you were entitled
 
         <h2>Type of proof we need to see</h2>
 
+        <p>A clear image of either:</p>
+
         <ul>
           <li>a MatB1 form</li>
           <li>a notification of Birth form (issued by a registered midwife)</li>
