We need proof pregnant bullet content update

--- a/app/views/v6-pcn-decs/we-need-proof-pregnant.html
+++ b/app/views/v6-pcn-decs/we-need-proof-pregnant.html
@@ -43,10 +43,10 @@ We cannot confirm you were entitled
         <p>A clear image of either:</p>
 
         <ul>
-          <li>a MatB1 form</li>
-          <li>a notification of Birth form (issued by a registered midwife)</li>
-          <li>a Birth or still birth certificate</li>
-          <li>your maternity exemption certificate</li>
+          <li>a MatB1 form issued by a GP or registered midwife</li>
+          <li>a Notification of Birth form issued by a registered midwife</li>
+          <li>a birth or still birth certificate</li>
+          <li>your maternity exemption certificate - this will either be a paper certificate you were sent by post or a digital certificate you were sent by email</li>
         </ul>
 
         <h2>How to send your proof</h2>
